<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/users">

    <fragment
        android:id="@+id/users"
        android:name="com.syrgdev.testapplicationforrentateam.users.presenter.UsersFragment"
        android:label="@string/title_users"
        tools:layout="@layout/view_users" >
        <action
            android:id="@+id/action_users_to_user"
            app:destination="@id/user" />
    </fragment>

    <fragment
        android:id="@+id/about"
        android:name="com.syrgdev.testapplicationforrentateam.about.presenter.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/view_about" />

    <fragment
        android:id="@+id/user"
        android:name="com.syrgdev.testapplicationforrentateam.user.presenter.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/view_user" />

</navigation>